test/errors/type/str/tostr.yasl
mt.lookup('', .tostr)(1)
